# viggy-circuits

./: .gitignore  LICENSE  README.md  circuits.py  example.py  lcr.py  main.py  requirements.txt  resistance.py  setup.cfg
Circuits/: circuit.py  device.py  error.py  helpers.py  junction.py  switch.py  wire.py  wireCollection.py
samples/: lcr.py  prismResistance.py  resistance.py
src/viggy_circuits/: __init__.py  circuit.py  device.py  helpers.py  junction.py  solution.py  wire.py
